// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should render properly with items 1`] = `
.emotion-2 {
  width: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-2 tr {
  background-color: #252525;
}

.emotion-2 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-2 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-2 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-2 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-2 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-2 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-2 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-2 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-0 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

<table
  className="emotion-2"
>
  <thead>
    <tr>
      <th
        className="emotion-0"
      >
        Foo
      </th>
      <th
        className="emotion-0"
      >
        Bar
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        a
      </td>
      <td>
        b
      </td>
    </tr>
    <tr>
      <td>
        c
      </td>
      <td>
        d
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Table /> should render properly with no items 1`] = `
.emotion-3 {
  width: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-3 tr {
  background-color: #252525;
}

.emotion-3 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-3 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-3 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-3 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-3 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-3 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-3 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-3 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-0 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-2 {
  height: 300px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: red;
  font-size: 16px;
  line-height: 20px;
}

<table
  className="emotion-3"
>
  <thead>
    <tr>
      <th
        className="emotion-0"
      >
        Foo
      </th>
      <th
        className="emotion-0"
      >
        Bar
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colSpan={2}
      >
        <div
          className="emotion-2"
        >
          empty
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
